# dj-statuspage

./: .gitignore  MANIFEST.in  README.md  README.rst  setup.cfg
djangostatuspage/: __init__.py  admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  urls_ui.py  views.py
djangostatuspage/templates/djangostatuspage/: base.html  status_page.html
