[metadata]
name = djangostatuspage
version = attr: djangostatuspage.__version__
description = A Django app to maintain system status page.
long_description = file: README.md
url = https://github.com/ivangeorgiev/dj-statuspage
author = Ivan Georgiev
author_email = ivan.georgiev@gmail.com
license = BSD-3-Clause  # Example license
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.7
install_requires =
    Django >= 3.2
    djangorestframework >= 3.12.4
